# HalconAlgorithm

./: .gitignore  algorithm.hdev
OCR文字识别_神经网络训练/: OCR_mlp神经网络分类器_字符识别.hdev  点状字母数字识别.hdev  点状字母数字识别_mlp.hdev  环形文字识别.hdev  罗超书字体识别_创建mlp神经分类器.hdev
Qt/HalconAlgoTest_使用HalconWindow/: HalconAlgoTest.sln
Qt/HalconAlgoTest_使用HalconWindow/include/HalconDeepLearning/: HalconDeepLearning.h
Qt/HalconAlgoTest_使用HalconWindow/lib/: HalconDeepLearning.lib  HalconDeepLearningd.lib  LensCheckAlgorithm.lib
Qt/HalconAlgoTest_使用HalconWindow/src/HalconAlgoTest/: HalconAlgoTest.cpp  HalconAlgoTest.h  HalconAlgoTest.qrc  HalconAlgoTest.ui  HalconAlgoTest.vcxproj  HalconAlgoTest.vcxproj.filters  main.cpp
Qt/HalconDeepLearning/: HalconDeepLearning.cpp  HalconDeepLearning.h  HalconDeepLearning.vcxproj
Qt/HalconDeepLearningTest/: HalconAlgoTest.sln
Qt/HalconDeepLearningTest/lib/: HalconDeepLearningd.lib  LensCheckAlgorithmd.lib
Qt/HalconDeepLearningTest/src/HalconAlgoTest/: HalconAlgoTest.cpp  HalconAlgoTest.h  HalconAlgoTest.ui  HalconAlgoTest.vcxproj  HalconAlgoTest.vcxproj.filters  main.cpp
Qt/HalconDeepLearningTest/src/HalconDeepLearning/: HalconDeepLearning.cpp  HalconDeepLearning.h  HalconDeepLearning.vcxproj  HalconDeepLearning.vcxproj.filters  halconAlgorithm.cpp  halcondeeplearning_global.h
Qt/HalconDeepLearningTest/src/LensCheckAlgorithm/: HalconAlgorithm.h  LensCheckAlgorithm.cpp  LensCheckAlgorithm.h  LensCheckAlgorithm.vcxproj  LensCheckAlgorithm.vcxproj.filters  LensCheckAlgorithmPrivate.cpp  LensCheckAlgorithmPrivate.h  lenscheckalgorithm_global.h
Qt/HalconDeepLearningTest/src/LensCheckAlgorithm/algorithm/: halconLensCheck.cpp
Qt/Matching/: main.cpp  matching.cpp  matching.h  matching.pro  qhalconwindow.cpp  qhalconwindow.h  readme.txt
Qt/simpleCamera/: CMakeLists.txt
Qt/simpleCamera/src/: CMakeLists.txt
Qt/simpleCamera/src/MainUI/: CMakeLists.txt  main.cpp  mainui.cpp  mainui.h  mainui.ui
mlp颜色识别/: colors.hdev  使用训练好的模型识别color.hdev
project/差异模型寻找缺陷/: 差异模型寻找缺陷.hdev
图像分割/分水岭/: watersheds.hdev
图像分割/区域生长法/: regiongrowing_mean多点区域增长.hdev  regiongrowing区域生长.hdev
图像分割/阈值处理/: auto_threshold自适应阈值_根据灰度直方图的波峰分割.hdev  binary_threshold单一背景自动阈值分割.hdev  char_threshold字符提取_提取灰度曲线峰值.hdev  dyn_threshold局部阈值分割_不明显数字分割.hdev  dyn_threshold局部阈值分割_大蒜.hdev  threshold全局阈值处理.hdev  var_threshold变化分割.hdev
图像增强/图像平滑与去噪/: gauss高斯滤波.hdev  mean中值滤波.hdev  median中值滤波.hdev
图像增强/增强对比度/: emphasise.hdev  scale_img.hdev
图像增强/直方图均衡/: equHisto.hdev
图像增强/锐化失焦图像/: shockFilter冲击滤波器.hdev
寻找手机关屏幕状态/: algorithm.hdev
形态学处理/: bottom_hat底帽操作.hdev  closing闭运算.hdev  dilation膨胀.hdev  erosion腐蚀.hdev  opening开运算.hdev  top_hat顶帽操作.hdev  底帽提取暗图区域.hdev  灰度图膨胀腐蚀开闭操作.hdev  计算图片的树木个数.hdev
手眼标定/: 九点标定算子.hdev  制作标定板.hdev
手眼标定/眼在手上/: GetZYZDegree.hdvp  caltab.descr  caltab.ps  innerPara.cal  pose.csv  poseIn.xlsx  roiModel.shm  temp.csv  temp步骤.txt  存储标定图片.hdev  手眼标定相机可移动无3D预览.hdev  手眼标定眼在手上使用标定结果夹取物品_匹配缩放模型生成.hdev  手眼标定眼在手上使用标定结果夹取物品_实时识别缩放物体.hdev  机器人位姿生成.hdev  机器人指令查询.xlsx
手眼标定/眼在手上/objTest/: rawObjPose.csv  temp.csv  writePicture.hdev  机器人位姿生成.hdev
手眼标定/简单九点标定/: simple9Calibration.hdev
文件读取/csv文件读取/: csv_read.hdev  test.csv
模板匹配/基于描述符的模板匹配/: descriptor_model基于描述符的模板.hdev
模板匹配/局部形变匹配/: local_deformable局部形变匹配.hdev
模板匹配/形状匹配/: baseImg.tif  matchShapeModel.hdev  使用模板文件.hdev  生成模板文件.hdev  箭头匹配.hdev
模板匹配/相关性匹配/: ncc_model使用保存的模型文件寻找.hdev  ncc_model创建并保存为文件.hdev
模板匹配/组件匹配/: 使用组件文件.hdev  生成组件文件.hdev
测量拟合/矩形直线测量对/: measPairs.hdev
深度学习/分类/Mnist缺陷检测/: classify_Mnist_deep_learning.hdev
深度学习/分类/水果分类/: classify_fruit_deep_learning.hdev
深度学习/检测/找水杯/: labels.hdict  图片大小缩放.hdev  杯子检测_demo.hdev  杯子训练_demo.hdev  杯子训练项目.dltp
特征提取/: area_center.hdev  area_center_gray测试三维灰度图的体积中心.hdev  area_holes计算孔洞面积.hdev  gray_features灰度图特征参数显示.hdev  inner_circle最大内接圆.hdev  intensiy求取均值与偏差.hdev  min_max_gray灰度图中最大最小灰度值.hdev  select_gray灰度图特征筛选.hdev  select_shape特征选择_gen_image_proto清除指定区域.hdev  smallest_rectangle2.hdev
特征提取/gen_cooc_matrix共生矩阵判定纹理/: gen_cooc_matrix共生矩阵判定纹理_使用训练文件.hdev  gen_cooc_matrix共生矩阵判定纹理_生成训练文件.hdev  train.omc
相机标定/: caltab.descr  caltab.ps  paras.cal  代码生成标定参数.hdev  使用标定板文件.hdev  生成标定板文件.hdev
简单相机采图处理/: grabDealImg.hdev
车牌识别/: 车牌识别.hdev
边缘检测/: derivate_gauss图像边缘提取.hdev  edges_color_sub_pix彩图xld提取.hdev  edges_image新式边缘检测.hdev  edges_sub_pix亚像素边缘提取.hdev  fit_circle_contour_xld拟合圆形轮廓.hdev  laplace_of_gauss配合zero_crossing检测.hdev  laplace配合zero_crossing检测.hdev  lines_color彩图边缘线段提取.hdev  lines_gauss边缘线段提取.hdev  sobel_amp索贝尔求梯度.hdev  xld提取_分割_筛选_连接.hdev
透视形变图像校正/: matrix2DConvert.hdev
颜色与纹理/: decompose_sub_image分离通道后颜色相减求蓝色.hdev  texture_laws纹理滤波器.hdev
颜色识别/: yellowColor.hdev
